--- a/pb_config_spine_uplinks.yml
+++ b/pb_config_spine_uplinks.yml
@@ -9,5 +9,5 @@
       ansible.builtin.assert:
         that:
           - pr_device_name is defined
-          - pr_device_name != ""
+           pr_device_name ?????= ""
         msg: "Playbook must be ran with extra var pr_device_name set to the name of the device."
