--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
@@ -8,16 +9,14 @@ repos:
       - id: debug-statements
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+    rev: 4.0.1
     hooks:
       - id: flake8
-        additional_dependencies: ["flake8-bandit", "flake8-bugbear"]
 
-  - repo: https://github.com/pycqa/isort
-    rev: 5.9.3
+  - repo: https://github.com/ansible-community/ansible-lint/
+    rev: v5.4.0
     hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files"]
+      - id: ansible-lint
 
   - repo: https://github.com/psf/black
     rev: 21.7b0
